feat: move parent event descriptors (#18524)
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>