@@ -7,11 +7,10 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.hedera.hapi.node.base.Timestamp;
-import com.hedera.hapi.platform.event.EventCore;
-import com.hedera.hapi.platform.event.GossipEvent;
 import com.hedera.hapi.platform.event.StateSignatureTransaction;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
+import com.swirlds.common.test.fixtures.Randotron;
+import com.swirlds.platform.test.fixtures.event.TestingEventBuilder;
 import com.swirlds.state.merkle.singleton.StringLeaf;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -32,7 +31,6 @@ import org.junit.jupiter.api.Test;
 class ISSTestingToolStateTest {
 
     private static final int RUNNING_SUM_INDEX = 3;
-    private ISSTestingToolMain main;
     private ISSTestingToolState state;
     private ISSTestingToolConsensusStateEventHandler consensusStateEventHandler;
     private Round round;
@@ -41,12 +39,12 @@ class ISSTestingToolStateTest {
     private Consumer<ScopedSystemTransaction<StateSignatureTransaction>> consumer;
     private Transaction transaction;
     private StateSignatureTransaction stateSignatureTransaction;
+    private Bytes signatureTransactionBytes;
 
     @BeforeEach
     void setUp() {
         state = new ISSTestingToolState();
         consensusStateEventHandler = new ISSTestingToolConsensusStateEventHandler();
-        main = mock(ISSTestingToolMain.class);
         final var random = new Random();
         round = mock(Round.class);
         event = mock(ConsensusEvent.class);
@@ -64,6 +62,7 @@ class ISSTestingToolStateTest {
                 .hash(Bytes.wrap(hash))
                 .round(round.getRoundNum())
                 .build();
+        signatureTransactionBytes = StateSignatureTransaction.PROTOBUF.toBytes(stateSignatureTransaction);
     }
 
     @Test
@@ -94,7 +93,6 @@ class ISSTestingToolStateTest {
 
         final var stateSignatureTransactionBytes =
                 StateSignatureTransaction.PROTOBUF.toBytes(stateSignatureTransaction);
-        when(main.encodeSystemTransaction(stateSignatureTransaction)).thenReturn(stateSignatureTransactionBytes);
         when(transaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
 
         // When
@@ -125,7 +123,6 @@ class ISSTestingToolStateTest {
 
         final var stateSignatureTransactionBytes =
                 StateSignatureTransaction.PROTOBUF.toBytes(stateSignatureTransaction);
-        when(main.encodeSystemTransaction(stateSignatureTransaction)).thenReturn(stateSignatureTransactionBytes);
         when(transaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
         when(secondConsensusTransaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
         when(thirdConsensusTransaction.getApplicationTransaction()).thenReturn(stateSignatureTransactionBytes);
@@ -150,8 +147,6 @@ class ISSTestingToolStateTest {
         final var emptyStateSignatureTransaction = StateSignatureTransaction.DEFAULT;
         final var emptyStateSignatureTransactionBytes =
                 StateSignatureTransaction.PROTOBUF.toBytes(emptyStateSignatureTransaction);
-        when(main.encodeSystemTransaction(emptyStateSignatureTransaction))
-                .thenReturn(emptyStateSignatureTransactionBytes);
         when(transaction.getApplicationTransaction()).thenReturn(emptyStateSignatureTransactionBytes);
 
         // When
@@ -175,8 +170,6 @@ class ISSTestingToolStateTest {
         final var emptyStateSignatureTransaction = StateSignatureTransaction.DEFAULT;
         final var emptyStateSignatureTransactionBytes =
                 StateSignatureTransaction.PROTOBUF.toBytes(emptyStateSignatureTransaction);
-        when(main.encodeSystemTransaction(null))
-                .thenReturn(StateSignatureTransaction.PROTOBUF.toBytes(emptyStateSignatureTransaction));
         when(transaction.getApplicationTransaction()).thenReturn(emptyStateSignatureTransactionBytes);
 
         // When
@@ -195,30 +188,9 @@ class ISSTestingToolStateTest {
     @Test
     void preHandleEventWithMultipleSystemTransaction() {
         // Given
-        final var gossipEvent = mock(GossipEvent.class);
-        final var eventCore = mock(EventCore.class);
-        when(gossipEvent.eventCore()).thenReturn(eventCore);
-        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
-        when(eventCore.creatorNodeId()).thenReturn(1L);
-        when(eventCore.parents()).thenReturn(Collections.emptyList());
-        final var consensusTransaction = mock(TransactionWrapper.class);
-        final var secondConsensusTransaction = mock(TransactionWrapper.class);
-        final var thirdConsensusTransaction = mock(TransactionWrapper.class);
-
-        final var stateSignatureTransactionBytes =
-                StateSignatureTransaction.PROTOBUF.toBytes(stateSignatureTransaction);
-        final var transactionProto = com.hedera.hapi.node.base.Transaction.newBuilder()
-                .bodyBytes(stateSignatureTransactionBytes)
+        final PlatformEvent event = new TestingEventBuilder(Randotron.create())
+                .setTransactionBytes(Collections.nCopies(3, signatureTransactionBytes))
                 .build();
-        final var transactionBytes = com.hedera.hapi.node.base.Transaction.PROTOBUF.toBytes(transactionProto);
-
-        when(consensusTransaction.getApplicationTransaction()).thenReturn(transactionBytes);
-        when(secondConsensusTransaction.getApplicationTransaction()).thenReturn(transactionBytes);
-        when(thirdConsensusTransaction.getApplicationTransaction()).thenReturn(transactionBytes);
-        when(gossipEvent.transactions()).thenReturn(List.of(transactionBytes, transactionBytes, transactionBytes));
-        event = new PlatformEvent(gossipEvent);
-        when(round.iterator()).thenReturn(Collections.singletonList(event).iterator());
-
         // When
         consensusStateEventHandler.onPreHandle(event, state, consumer);
 
@@ -229,27 +201,9 @@ class ISSTestingToolStateTest {
     @Test
     void preHandleEventWithSystemTransaction() {
         // Given
-        final var gossipEvent = mock(GossipEvent.class);
-        final var eventCore = mock(EventCore.class);
-        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
-        when(eventCore.creatorNodeId()).thenReturn(1L);
-        when(eventCore.parents()).thenReturn(Collections.emptyList());
-        final var consensusTransaction = mock(TransactionWrapper.class);
-        when(gossipEvent.eventCore()).thenReturn(eventCore);
-
-        final var stateSignatureTransactionBytes =
-                StateSignatureTransaction.PROTOBUF.toBytes(stateSignatureTransaction);
-        final var transactionProto = com.hedera.hapi.node.base.Transaction.newBuilder()
-                .bodyBytes(stateSignatureTransactionBytes)
+        final PlatformEvent event = new TestingEventBuilder(Randotron.create())
+                .setTransactionBytes(List.of(signatureTransactionBytes))
                 .build();
-        final var transactionBytes = com.hedera.hapi.node.base.Transaction.PROTOBUF.toBytes(transactionProto);
-        when(consensusTransaction.getApplicationTransaction()).thenReturn(transactionBytes);
-        when(gossipEvent.transactions()).thenReturn(List.of(transactionBytes));
-
-        event = new PlatformEvent(gossipEvent);
-
-        when(round.iterator()).thenReturn(Collections.singletonList(event).iterator());
-        when(transaction.getApplicationTransaction()).thenReturn(transactionBytes);
 
         // When
         consensusStateEventHandler.onPreHandle(event, state, consumer);
@@ -261,25 +215,10 @@ class ISSTestingToolStateTest {
     @Test
     void preHandleEventWithEmptyTransaction() {
         // Given
-        final var gossipEvent = mock(GossipEvent.class);
-        final var eventCore = mock(EventCore.class);
-        when(eventCore.timeCreated()).thenReturn(Timestamp.DEFAULT);
-        when(eventCore.creatorNodeId()).thenReturn(1L);
-        when(eventCore.parents()).thenReturn(Collections.emptyList());
-        final var consensusTransaction = mock(TransactionWrapper.class);
-        when(gossipEvent.eventCore()).thenReturn(eventCore);
-
-        final var stateSignatureTransactionBytes =
-                StateSignatureTransaction.PROTOBUF.toBytes(StateSignatureTransaction.DEFAULT);
-        final var transactionProto = com.hedera.hapi.node.base.Transaction.newBuilder()
-                .bodyBytes(stateSignatureTransactionBytes)
+        final PlatformEvent event = new TestingEventBuilder(Randotron.create())
+                .setAppTransactionCount(0)
+                .setSystemTransactionCount(0)
                 .build();
-        final var transactionBytes = com.hedera.hapi.node.base.Transaction.PROTOBUF.toBytes(transactionProto);
-        when(consensusTransaction.getApplicationTransaction()).thenReturn(transactionBytes);
-
-        event = new PlatformEvent(gossipEvent);
-        when(round.iterator()).thenReturn(Collections.singletonList(event).iterator());
-        when(transaction.getApplicationTransaction()).thenReturn(transactionBytes);
 
         // When
         consensusStateEventHandler.onPreHandle(event, state, consumer);
